# cyberpunk-insurgency-

./: . env  .gitignore  Anchor.toml  README.md  bolt.toml  package.json
backend/: Cargo.toml  bolt.toml  crank.ts  package.json  seed-shadow.ts
backend/programs-ecs/components/game/src/: lib.rs
backend/programs-ecs/systems/: powerup_spawn.rs  shadow_record.rs
backend/programs-ecs/systems/command/src/: lib.rs
backend/programs-ecs/systems/finish/src/: lib.rs
backend/programs-ecs/systems/generate/src/: lib.rs
backend/programs-ecs/systems/join/src/: lib.rs
backend/programs-ecs/systems/start/src/: lib.rs
backend/programs-ecs/systems/tick/src/: lib.rs
frontend/: .env.local  package.json
frontend/src/: index.html  index.scss  index.tsx  seed-shadow.ts.
frontend/src/components/game/: GameError.tsx  GamePlayer.scss  GamePlayer.tsx
frontend/src/components/game/grid/: GameGridCell.scss  GameGridCell.tsx  GameGridRows.scss  GameGridRows.tsx
frontend/src/components/game/lobby/: GameLobbyRoot.tsx  PoisonRingOverlay.tsx
frontend/src/components/game/play/: GamePlayMap.scss  GamePlayMap.tsx  GamePlayRoot.scss  GamePlayRoot.tsx  PoisonRingOverlay.scss  PoisonRingOverlay.tsx  PowerUpNotification.scss  (+1 more)
frontend/src/components/page/: PageCreate.tsx  PageHome.tsx  PagePlay.tsx
frontend/src/engine/: MagicBlockEngine.ts
frontend/src/states/: gameCreate.ts  gameFetch.ts  gameList.ts  gameListen.ts  gamePrograms.ts  gameSystemCommand.ts  gameSystemFinish.ts  gameSystemGenerate.ts  gameSystemJoin.ts  gameSystemStart.ts  gameSystemTick.ts  gameWorld.ts
